# Akshara-Mantapa

./: .gitignore  README.md  README_KN.md
.github/workflows/: deploy.yaml
backend/: Cargo.toml
backend/src/: alphabet.rs  bijection.rs  constants.rs  lib.rs  library.rs  types.rs  wasm.rs
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js
frontend/src/: app.html
frontend/src/lib/: api.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/about/: +page.svelte
frontend/src/routes/ideas/: +page.svelte
frontend/src/routes/info/: +page.svelte
frontend/static/: README.md
